--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
 #main {
     grid-area: main;
 }
-#new-message {
+#new-Post {
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -26,7 +26,7 @@ body {
     margin-left: 0px;
     border-top: 1px solid #3f3f3f;
 }
-#messages-list {
+#posts-list {
     padding: 5px 0 0 5px;
 }
 #sidebar {
